<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WHYQ</string>
    <string name="app_name_title">WHY Q</string>
    <string name="app_name_inkakao"> 펌핑 이미지 SNS </string>
    <string name="bt_join">회원 등록</string>
    <string name="bt_login">로그인</string>
    <string name="bt_unlike">취소</string>
    <string name="bt_facebook">Login with Facebook</string>
    <string name="bt_twitter">Login with Twitter</string>
    <string name="bt_join_permping">Regrister Account</string>
    <string name="permping_head_title">Permping</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="bt_cancel">Cancel</string>
    <string name="screen_login">Whyq.com/Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="acc_email">Email</string>
    <string name="acc_password">Password</string>
    <string name="acc_confirm_password">Confirm Password</string>
    <string name="bt_create_account">Done</string>
    <string name="nick_name">Nickname:</string>
    <string name="user_name">Username</string>
    <string name="category">카테고리</string>
    <string name="category_prompt">Main category</string>
    <string name="board_prompt">Select board</string>
    <string name="board_name">보드 이름</string>
    <string name="board_description">보드 설명</string>
    <string name="bt_create_board">확인</string>
    <string name="logout">로그 아웃</string>
    <string name="account">Account</string>
    <string name="cancel">Cancel</string>
    <string name="bt_reperm">펌하기</string>
    <string name="bt_like">Like</string>
    <string name="bt_comment">댓글</string>
    <string name="ok">OK</string>
    <string name="title_reperm">RePerm</string>
    <string name="image_description">Description of Image</string>
    <string name="comment_title">Comment</string>
    <string name="addnew">All category</string>
    <string name="login_text1">Whyq</string>
    <string name="login_text2"></string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Re-enter Password</string>
    <string name="required">required</string>
    <string name="login">Login</string>
    <string name="image_take_photo">Take a photo</string>
    <string name="gallery">From gallry</string>
    <string name="create_board">보드 만들기</string>
    <string name="new_description">당신의 이야기를 담아 주세요</string>
    <string name="new_board">보드</string>
    <string name="new_place">위치</string>
    <string name="new_facebook">페이스북</string>
    <string name="new_twitter">트위터</string>
    <string name="new_kakao_talk">카카오톡</string>
    <string name="voice_recording">얘기 녹음</string>
    <string name="followers">팔로우</string>
    <string name="perm">펌</string>
    <string name="follow">팔로우</string>
    <string name="unfollow">언팔로우</string>
    <string name="welcome1">이미지를 소통하는 소셜 커뮤니티</string>
    <string name="welcome2">순간의 이야기를 펌핑과 함께</string>
    <string name="exit_title">Exit App</string>
    <string name="exit_content">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="yes_delete">예</string>
    <string name="no">No</string>
    <string name="delete">삭제</string>
    <string name="addProfile">프로파일 사진 올리기</string>
    <string name="app_info">Please record an audio</string>
    <string name="stop_recording">Stop</string>
    <string name="start_recording">Start</string>
    <string name="record_audio">얘기 녹</string>
    <string name="confirm_delete">당신의 펌을 삭제하시겠습니까?</string>
    <string name="AlertTitleWebExtLoadError">Netword not available</string>
    <string name="AlertMsgWebExtLoadError">Please check your netword again!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_search">Search name and tag</string>
    <string name="invite">Invite</string>
    <string name="friend_all">Friend all</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="view_bill">View Bill</string>
    <string name="view_place">View Place</string>
    <string name="friend_from_facebook">Friends from Facebook</string>
    <string name="friends">Friends</string>
    <string name="checked_bills">Checked Bills</string>
    <string name="recent_activities">RECENT ACTIVITIES</string>
    <string name="find_friend_twitter">Find friends from Twitter</string>
    <string name="search_by_name">Search by name</string>
    <string name="find_friend_from_facebook">Find friends form Facebook</string>
    <string name="find_friends_from_twitter">Find friends from Twitter</string>
    <string name="receive_notification_from_whyq">Receive notification from WHYQ</string>
    <string name="allow_user_to_see_my_friend">Allow user to see my friends</string>
    <string name="sounds_notification">Sounds notification</string>
    <string name="history">History</string>
    <string name="orders_place">Orders placed</string>
    <string name="find_a_friend">Find a friend</string>
    <string name="search_by_name">Search by name</string>
    <string name="About">About</string>
    <string name="Menu">Menu</string>
    <string name="Promotion">Promotion</string>
    <string name="filter_view_all">View All</string>
    <string name="filter_friend_comment">Friend\'s Comment</string>
    <string name="saving">Saving</string>

    
    <string name="title_activity_main">PayPal Access</string>
    <string name="title_activity_login">Login</string>
    <string name="btn_login">Login with PayPal</string>
    <string name="progress_loading_title">Loading&#8320;</string>
    <string name="progress_loading_msg">Login is possible in a few seconds</string>
    <string name="toast_login_ok">Logged in</string>
    <string name="toast_login_failed">Login failed</string>
    <string name="login_description">This enables the user to use his PayPal credentials to login. Thus he doesn\'t have to create yet another account and remember yet another password.</string>
	<string name="login_oauth">OAuth 2.0</string>
	<string name="login_openid">OpenID</string>
	
	<string name="dots_mean">The coloured dots indicate the progression of your order</string>
    
	
	
	    <!-- Messages Location -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
       <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    
        <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>


    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>
    <!-- End Messages Location -->
    
    
    <string name="facebook_app_id">429233960446986</string>
    
    
    <string name="share_with_whyq">Share with WHYQ users</string>
    <string name="share_with_FB">Share to Facebook friends</string>
    <string name="tag_friend">Tag friends</string>
    <string name="hint_comment">How do you feel about this place?</string>
    <string name="comment_intro"><p>Do us a favour!<br/>Share your comments to help WHY Q users make a good decision on where to go</p></string>
</resources>