<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="0" >

    <TableRow android:paddingTop="40dp" android:paddingLeft="20dp" android:paddingRight="20dp">

        <Button
            android:id="@+id/bt_login_with_facebook"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/bt_facebook"
            android:textColor="#FFFFFF" 
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/bt_login_with_twitter"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/bt_twitter"
            android:textColor="#FFFFFF" 
            android:layout_height="40dp"/>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:paddingBottom="40dp"
        android:paddingTop="20dp" android:paddingLeft="20dp" android:paddingRight="20dp">

        <Button
            android:id="@+id/bt_join_permping"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/button_bg"
            android:text="@string/bt_join_permping"
            android:textColor="#FFFFFF" />
    </TableRow>

</TableLayout>