<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        layout="@layout/title_bar" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/btnAddProfile"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/addProfile"
			android:background="@drawable/button_style"
			android:textSize="20dp"
			style="?android:attr/buttonStyleSmall"
			android:textColor="#5e5d5d"/>
        <Button
            android:id="@+id/btLogout"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
			android:background="@drawable/button_style"
			android:textSize="20dp"
			android:layout_marginTop="10dp"
			style="?android:attr/buttonStyleSmall"
			android:textColor="#5e5d5d"/>
        <Button
            android:id="@+id/btCancel"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/button_style"
            style="?android:attr/buttonStyleSmall"
            android:textSize="20dp"
            android:textColor="#5e5d5d"
            android:layout_marginTop="10dp"/>
       </LinearLayout>
</LinearLayout>