<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:angle="90"
    android:background="@drawable/bg_header"
    android:orientation="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <Button
                android:id="@+id/btCancel"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/title_button_bg"
                android:text="@string/cancel"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="10dip"
                android:text="@string/title_reperm"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/title_button_bg"
                android:text="@string/ok"
                android:textColor="#FFFFFF"
                android:visibility="invisible" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="25dp"
        android:visibility="visible" />
</RelativeLayout>