<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="60dp"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        layout="@layout/title_bar" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
		android:padding="10dp"
      
        android:background="@drawable/explorer_item_bg_first" >

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="85dp"
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" 
            android:paddingBottom="3dp"
            android:gravity="center_vertical"/>

        <Spinner
            
            android:id="@+id/categorySpinner"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="15dp"
            android:paddingBottom="3dp"
            android:background="#00000000"
            android:layout_gravity="center_vertical"
            android:prompt="@string/category_prompt" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitEnd"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow" />
    </LinearLayout>

    <!--
                <Spinner 
   	            android:id="@+id/categorySpinner"
   	            android:layout_width="fill_parent"
   	            android:layout_height="wrap_content"
   	            android:background="#00000000"
		    	android:gravity="center" 
   	            android:prompt="@string/category_prompt"/>
    -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/explorer_item_bg" >

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/board_name"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/boardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:background="#00000000"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/required"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/explorer_item_bg_end" >

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/board_description"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/boardDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:background="#00000000"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/required"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/createBoard"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:text="@string/bt_create_board"
            android:textColor="#5e5d5d"
            android:textSize="20dp" />
    </LinearLayout>

	
</LinearLayout>