<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/login_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:padding="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="5" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:paddingRight="6dp"
                android:paddingTop="2dp" >

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_register_avatar"
                    android:onClick="takeImageOnclicked" />
            </LinearLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingLeft="4dp" >

                <TableRow  android:layout_width="match_parent" android:stretchColumns="0" android:background="@drawable/explorer_item_bg_first" >

                    <EditText
                        android:layout_weight="1"
                        android:stretchColumns="0"
                        android:layout_width="match_parent"
                        android:id="@+id/first_name"
                        style="@style/edit_text"
                        android:background="@drawable/bg_input"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:maxLength="30"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="-3dp"
                    android:background="@drawable/explorer_item_bg_end" >

                    <EditText
                        android:layout_weight="1"
                        android:id="@+id/last_name"
                        style="@style/edit_text"
                        android:background="@drawable/bg_input"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp"
                        android:singleLine="true" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TableRow
                android:layout_marginTop="0dp"
                android:background="@drawable/explorer_item_bg_first" >

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/email"
                    style="@style/edit_text"
                    android:background="@drawable/bg_input"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_marginTop="-3dp"
                android:background="@drawable/explorer_item_bg_end" >

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/user_name"
                    style="@style/edit_text"
                    android:background="@drawable/bg_input"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:singleLine="true" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:stretchColumns="1" >

            <TableRow
                android:layout_marginTop="0dp"
                android:background="@drawable/explorer_item_bg_first" >

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/acccountPassword"
                    style="@style/edit_text"
                    android:background="@drawable/bg_input"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="-3dp"
                android:background="@drawable/explorer_item_bg_end" >

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/confirm_password"
                    style="@style/edit_text"
                    android:background="@drawable/bg_input"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:singleLine="true" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>